# multiplatform_deep_researcher

./: .dockerignore  .env.example  .gitignore  DOCKER_DEPLOYMENT.md  Privacy Policy v1 (1).docx  README.md  Terms and Conditions.docx  diagnose-frontend.sh  docker-compose.yml  env.example  flow.py  package.json  pyproject.toml  requirements.txt  streamlit_app.py
backend/: .dockerignore  Dockerfile  __init__.py  main.py  pyproject.toml
backend/api/: models.py  websocket.py
backend/api/routes/: health.py  research.py
backend/core/: config.py  logging.py  mcp.py  rate_limit.py  schemas.py
backend/services/: flow.py  research.py  session.py
backend/tests/: test_apis.py
docs/: NGINX_CONFIG.md  SSL_SETUP.md
frontend/: .dockerignore  .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: PRIVACY_POLICY.md  TERMS_AND_CONDITIONS.md
frontend/src/: App.tsx  index.css
frontend/src/components/: Footer.tsx  LandingPage.css  LandingPage.tsx  PrivacyPolicy.css  PrivacyPolicy.tsx  TermsAndConditions.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: index.ts
