[project]
name = "multiplatform-deep-researcher"
version = "1.0.0"
description = "MCP-powered multi-agent deep researcher using CrewAI and Bright Data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = []
keywords = ["ai", "research", "crewai", "mcp", "fastapi", "agents"]

dependencies = [
    # Core Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    
    # CrewAI & MCP (Multi-Agent Research)
    "crewai>=0.118.0",
    "crewai-tools[mcp]>=0.69.0",
    "mcp>=1.13.1",
    
    # LLM Dependencies (explicit to prevent server import errors)
    "litellm>=1.50.0",
    "openai>=1.50.0",
    "instructor>=1.0.0",
    
    # Rate Limiting & Security
    "slowapi>=0.1.9",
    
    # HTTP & Async
    "httpx>=0.28.0",
    "websockets>=15.0",
    
    # Utilities
    "python-dotenv>=1.1.1",
    "pydantic>=2.10.0",
    
    # Optional: Streamlit UI
    "streamlit>=1.49.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
